[tool.poetry]
name = "poetry-audit"
version = "0.0.0"
description = "A audit tool to use before to install any package"
authors = ["RickBarretto <78623871+RickBarretto@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.27.1"
jupyter = {version = "^1.0.0", optional = true}
ipykernel = {version = "^6.13.0", optional = true}

[tool.poetry.dev-dependencies]
bandit = "^1.7.4"
black = "^22.3.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
